2001-07-31  Martin Baulig  <baulig@suse.de>

	Removed the "ditem" moniker. We'll put it in gnome-core and
	develop it there when George is back from his holidays.

2001-07-29  Michael Meeks  <michael@ximian.com>

	* Makefile.am: kill moniker stuff that is now in gnome-vfs.

2001-07-27  Michael Meeks  <michael@ximian.com>

	* gnome-moniker-std.c: fix the factory name so it is what it
	says it is.

	* GNOME_Moniker_std.oaf.in.in: fix the shlib factory path.

	* Makefile.am (clean-local): actualy install the monikers.
	use xml-i18n-tools.

2001-07-20  Martin Baulig  <baulig@suse.de>

	* Makefile.am (install-data-local): Don't run ./desktop-item-boot.

2001-07-11  Martin Baulig  <baulig@suse.de>

	* bonobo-storage-fs.c, bonobo-moniker-extender-file: Use
	gnome_vfs_mime_type_from_name(), not gnome_mime_type_from_file().

	* bonobo-config-ditem-utils.c: Removed ORBit2 conditionals,
	always use ORBit2.

2001-07-10  Michael Meeks  <michael@ximian.com>

	* bonobo-moniker-vfs.c: add.

	* bonobo-stream-vfs.c: port to GObject / BonoboObject.

	* bonobo-storage-vfs.c: ditto.

	* GNOME_Moniker_std.oaf.in.in: register the vfs moniker.

2001-07-10  Michael Meeks  <michael@ximian.com>

	* bonobo-storage-fs.c (fs_open_storage),
	(fs_open_stream): CORBA_Object_duplicate the return
	values.

2001-07-10  Michael Meeks  <michael@ximian.com>

	* bonobo-moniker-file.c (bonobo_moniker_file_resolve):
	upd. to use it.

	* bonobo-storage-fs.c: port to BonoboObject / GObject.

2001-07-10  Michael Meeks  <michael@ximian.com>

	* bonobo-moniker-file.c (bonobo_moniker_file_resolve):
	use bonobo-stream-fs directly, not via the storage plugin
	architecture.

	* bonobo-stream-fs.c (bonobo_mode_to_fs): port to
	BonoboObject / GObject.

2001-07-09  Michael Meeks  <michael@ximian.com>

	* gnome-moniker-std.[ch]: add.

	* bonobo-moniker-extender-file.c: add.

	* bonobo-moniker-file.c: add.

	* Makefile.am (INCLUDES): re-vamp, add file monikers.

2001-07-07  Martin Baulig  <baulig@suse.de>
