@@ -1,0 +1,61 @@
+INCLUDES = \
+	-I..					\
+	-I$(srcdir)/..				\
+	$(WARN_CFLAGS)				\
+	$(MONIKER_CFLAGS)			\
+	-Wno-unused				\
+	-DLIBGNOME_PREFIX=\""$(prefix)"\"		\
+	-DLIBGNOME_LIBDIR=\""$(libdir)"\"		\
+	-DLIBGNOME_DATADIR=\""$(datadir)"\"		\
+	-DLIBGNOME_BINDIR=\""$(bindir)"\"		\
+	-DLIBGNOME_LOCALSTATEDIR=\""$(localstatedir)"\" \
+	-DLIBGNOME_LOCALEDIR=\""$(gnomelocaledir)"\"	\
+	-DLIBGNOME_SYSCONFDIR=\""$(sysconfdir)"\"	\
+	-DVERSION=\""$(VERSION)"\"			\
+	-DG_LOG_DOMAIN=\"GnomeMonikers\"
+
+EXTRA_DIST = \
+	Bonobo_Moniker_ditem.oaf.in
+
+moniker_LTLIBRARIES = libmoniker_ditem.la
+monikerdir = $(libdir)/bonobo/monikers
+
+# Desktop Item specific bits...
+
+# Data
+gnomesysconfdir = $(sysconfdir)/gnome-2.0
+gnomesysconf_DATA = gnome-desktop.xmldb
+
+# DItem moniker
+
+Bonobo_Moniker_ditem.oaf : $(srcdir)/Bonobo_Moniker_ditem.oaf.in $(top_builddir)/config.status
+	sed -e "s|\@MONIKER_LIBDIR\@|$(monikerdir)|" \
+	$(srcdir)/Bonobo_Moniker_ditem.oaf.in > Bonobo_Moniker_ditem.oaf 
+
+libmoniker_ditem_la_SOURCES =	 		\
+	bonobo-moniker-ditem.c 			\
+	bonobo-config-ditem.c			\
+	bonobo-config-ditem.h			\
+	bonobo-config-ditem-utils.c		\
+	bonobo-config-ditem-utils.h
+
+libmoniker_ditem_la_LIBADD = \
+	../libgnome/libgnome-2.la		\
+	$(MONIKER_LIBS)
+
+# DItem tests ...
+
+noinst_PROGRAMS = test-ditem desktop-item-boot
+
+test_ditem_SOURCES = \
+	test-ditem.c
+
+test_ditem_LDADD = \
+	../libgnome/libgnome-2.la		\
+	$(MONIKER_LIBS)
+
+desktop_item_boot_SOURCES = \
+	desktop-item-boot.c
+
+desktop_item_boot_LDADD = \
+	../libgnome/libgnome-2.la
