@@ -1,3 +1,8 @@
+2001-08-28  Martin Baulig  <baulig@suse.de>
+
+	* bonobo-config-ditem-utils.[ch], bonobo-config-ditem.[ch],
+	bonobo-moniker-ditem.c, test-ditem.c: Put this back.
+
 2001-07-31  Martin Baulig  <baulig@suse.de>
 
 	Removed the "ditem" moniker. We'll put it in gnome-core and
